--- a/index.html
+++ b/index.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>Snake game</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&amp;display=swap" rel="stylesheet">
+    <title>Jogo da Cobra</title>
+    <script type="text/javascript" src="./animation.js" defer=""></script>
+
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="caixa-jogo">
-    <h1>Snake Game</h1>
-    <canvas id="game-canvas" width="400" height="400"></canvas>
-    <div class="score">Pontuação: <span id="score">0</span></div>
-    <button id="button-reiniciar">Reiniciar</button>
-  <script src="script.css"></script>
+    <canvas id="background-canvas"></canvas>
+    <div class="caixa-jogo">
+        <div>
+            <img src="https://www.fiec.com.br/site/imgs/logo-fiec-vermelho.png" alt="Logo FIEC">
+        </div>
+        <h1>Jogo da Cobra</h1>
+        <canvas id="gameCanvas" width="400" height="400"></canvas>
+        <p id="score">Pontuação: <span id="score">0</span></p>
+        <button id="button-reiniciar">Reiniciar</button>
+    </div>
+    <script src="script.js"></script>
+    <script src="animation.js"></script>
 </body>
 </html>
