--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&amp;display=swap" rel="stylesheet">
-    <title>Jogo da Cobra</title>
-    <script type="text/javascript" src="./animation.js" defer=""></script>
-
+    <title>Snake Game</title>
+    <script type="text/javascript" src="./script.js" defer=""></script> <!-- Certifique-se de que o script está correto -->
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -15,12 +14,11 @@
         <div>
             <img src="https://www.fiec.com.br/site/imgs/logo-fiec-vermelho.png" alt="Logo FIEC">
         </div>
-        <h1>Jogo da Cobra</h1>
+        <h1>🍎🐍Snake Game🐍🍎</h1>
         <canvas id="gameCanvas" width="400" height="400"></canvas>
-        <p id="score">Pontuação: <span id="score">0</span></p>
-        <button id="button-reiniciar">Reiniciar</button>
+        <p id="score">Pontuação: <span id="score-span">0</span></p>
+        <button id="button-reiniciar">Iniciar</button>
     </div>
-    <script src="script.js"></script>
-    <script src="animation.js"></script>
-</body>
+    <script src="script.js"></script> 
+    <script src="animation.js"></script> 
 </html>
